tests/knowledge/testing-accounts-data/account-data-ec2-classic-platform/test/ap-northeast-1/ec2-describe-route-tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-877e3ffe",
                    "RouteTableId": "rtb-89196aef"
                }
            ],
            "OwnerId": "111111111111",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-89196aef",
            "Routes": [
                {
                    "DestinationCidrBlock": "172.31.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-a22dcbc5",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-724c5615"
        }
    ]
}
