tests/knowledge/testing-accounts-data/account-data-ec2-classic-platform/test/ap-northeast-1/ec2-describe-vpcs.json
{
    "Vpcs": [
        {
            "CidrBlock": "172.31.0.0/16",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-5b33d430",
                    "CidrBlock": "172.31.0.0/16",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "DhcpOptionsId": "dopt-57636330",
            "InstanceTenancy": "default",
            "IsDefault": true,
            "OwnerId": "111111111111",
            "State": "available",
            "VpcId": "vpc-724c5615"
        }
    ]
}
